[jms] Update common files for branch master (#366)
* Update common files

* Fixed native tests

* Fixed native tests

---------

Co-authored-by: Milenko Supic <supic82@gmail.com>