@@ -18,9 +18,3 @@ dependencies {
     runtimeOnly(libs.javax.json.api)
     runtimeOnly(mn.snakeyaml)
 }
-
-graalvmNative {
-    binaries.configureEach {
-        buildArgs.add '-J--add-exports=java.management/sun.management=ALL-UNNAMED' // https://github.com/oracle/graal/issues/3875
-    }
-}
